1-2-hw-health/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/dmitrykarchevsky/.+
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 8000
